Fixed misspelled link

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -101,7 +101,7 @@ ul.about {
 }
 
 .me {
-	background-image: url(me-camear.jpg);
+	background-image: url(me-camera.jpg);
 	background-position: 50% 50%;
   background-size: cover;
 	width: 410px;
