Added sping gallery

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -169,6 +169,27 @@ ul.about {
   grid-row-end: 4;
 }
 
+.gallery-1p2l .main {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.gallery-1p2l .row-1 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.gallery-1p2l .row-2 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
 .gallery-offset-columns {
   display: grid;
   grid-template-columns: 1fr 1fr;
