Added missing style, updated images

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -169,6 +169,16 @@ ul.about {
   grid-row-end: 4;
 }
 
+.gallery-1p2l {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+	height: 100%;
+	width: 100%;
+}
+
 .gallery-1p2l .main {
   grid-column-start: 1;
   grid-column-end: 2;
