--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -139,6 +139,7 @@ ul.about {
   grid-row-gap: 16px;
 	height: 100%;
 	width: 100%;
+	max-height: 75vw;
 }
 
 .gallery-1p3l .main {
@@ -177,6 +178,7 @@ ul.about {
   grid-row-gap: 16px;
 	height: 100%;
 	width: 100%;
+	max-height: 75vw;
 }
 
 .gallery-1p2l .main {
@@ -208,6 +210,7 @@ ul.about {
   grid-row-gap: 16px;
 	height: 100%;
 	width: 100%;
+	max-height: 75vw;
 }
 
 .gallery-offset-columns .img-1 {
@@ -246,6 +249,7 @@ ul.about {
   grid-row-gap: 16px;
 	height: 100%;
 	width: 100%;
+	max-height: 75vw;
 }
 
 .gallery-offset-rows .img-1 {
